project2/network.yml
Description: > 
    Kaung Thant Lwin / Udacity 

Parameters:

  EnvironmentName: 
    Description: An environment name that will be prefixed on every resources. 
    Type: String 
  
  VpcCIDR:
    Description: Please enter the IP (CIDR) Block for your VPC
    Type: String
    Default: 10.20.0.0/16
  
  PublicSubnet1cidr:
    Description: Please enter the CICD Block for this subnet
    Type: String
    Default: 10.20.0.0/24 

  PublicSubnet2cidr:
    Description: Please enter the CICD Block for this subnet
    Type: String
    Default: 10.20.1.0/24

  PrivateSubnet1cidr:
    Description: Please enter the CICD Block for this subnet
    Type: String
    Default: 10.20.2.0/24 

  PrivateSubnet2cidr:
    Description: Please enter the CICD Block for this subnet
    Type: String
    Default: 10.20.3.0/24

Resources:
#VPC_Setup
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true 
      Tags: 
        - Key: Project 
          Value: !Ref EnvironmentName 
  
#IGW_To_VPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Project
          Value: !Ref EnvironmentName
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
#Public&PrivateSubnets
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '']
      VpcId: !Ref VPC 
      CidrBlock: !Ref PublicSubnet1cidr
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ1)
      
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs '']
      VpcId: !Ref VPC 
      CidrBlock: !Ref PublicSubnet2cidr
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Subnet (AZ2)

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 0, !GetAZs '']
      VpcId: !Ref VPC 
      CidrBlock: !Ref PrivateSubnet1cidr
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ1)
  
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs '']
      VpcId: !Ref VPC 
      CidrBlock: !Ref PrivateSubnet2cidr
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Private Subnet (AZ2)
#PublicRouteTable 
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Project 
          Value: !Ref EnvironmentName
  
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable
    
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

#NATGateway for Private Subnet
  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  
  NATGateway1:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: "NAT Gateway 1"
        - Key: Project
          Value: !Ref EnvironmentName 
  
  NATGateway2:
    Type: AWS::EC2::NatGateway
    Properties: 
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
        - Key: Name
          Value: "NAT Gateway 2"
        - Key: Project
          Value: !Ref EnvironmentName 
#PrivateRouteTable 
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC 
      Tags:
        - Key: Project
          Value: !Ref EnvironmentName
  
  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway1
  
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1
    
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC 
      Tags:
        - Key: Project
          Value: !Ref EnvironmentName
  
  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway2
  
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

#Outputs 
Outputs:
  VPC:
    Description: The created VPC
    Value: !Ref VPC 
    Export: 
      Name: !Sub ${EnvironmentName}-VPCID 

  VPCPublicRouteTable:
    Description: Public Route Table 
    Value: !Ref PublicRouteTable 
    Export: 
      Name: !Sub ${EnvironmentName}-Pub-RT 
  
  VPCPrivateRouteTable1:
    Description: Private Route Table 1
    Value: !Ref PrivateRouteTable1
    Export: 
      Name: !Sub ${EnvironmentName}-Priv-RT1 
  
  VPCPrivateRouteTable2:
    Description: Private Route Table 2
    Value: !Ref PrivateRouteTable2
    Export: 
      Name: !Sub ${EnvironmentName}-Priv-RT2
  
  PublicSubents:
    Description: A list of Public Subnets 
    Value: !Join [",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
    Export: 
      Name: !Sub ${EnvironmentName}-Pub-Nets
  
  PrivateSubents:
    Description: A list of Private Subnets 
    Value: !Join [",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
    Export: 
      Name: !Sub ${EnvironmentName}-Priv-Nets

  PublicSubnet1:
    Description: The Public Subnet in (AZ1)
    Value: !Ref PublicSubnet1
    Export: 
      Name: !Sub ${EnvironmentName}-Pub-Net1

  PublicSubnet2:
    Description: The Public Subnet in (AZ2)
    Value: !Ref PublicSubnet2
    Export: 
      Name: !Sub ${EnvironmentName}-Pub-Net2
  
  PrivateSubnet1:
    Description: The Private Subnet in (AZ1)
    Value: !Ref PrivateSubnet2
    Export: 
      Name: !Sub ${EnvironmentName}-Priv-Net1

  PrivateSubnet2:
    Description: The Private Subnet in (AZ2)
    Value: !Ref PrivateSubnet2
    Export: 
      Name: !Sub ${EnvironmentName}-Priv-Net2
